# makepkg

./: Cargo.toml  build.rs
src/: .INSTALL  .MTREE  .PKGINFO  build.rs  callback.rs  config.rs  error.rs  fs.rs  installation_variables.rs  lib.rs  lint_config.rs  lint_pkgbuild.rs  makepkg.rs  options.rs  package.rs  pacman.rs  pkgbuild.rs  raw.rs  run.rs  srcinfo.rs
src/bash/: pkgbuild.sh
src/build_env/: buildflags.rs  compiler.rs  debug.rs  mod.rs
src/integ/: bzr.rs  git.rs  mercurial.rs  mod.rs  vcs.rs
src/main/: args.rs  main.rs  print.rs
src/sources/: bzr.rs  curl.rs  file.rs  fossil.rs  git.rs  mercurial.rs  mod.rs  svn.rs  vcs.rs
